[S12P21E206-158] Refactor: 사용자 위시리스트 조회하기